...
            <objects>
                <navigationController id="YGe-cB-Pur" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Now" image="Today" id="aBS-I4-FRk"/>
                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" translucent="NO" id="okf-LT-hAN">
...
                                <rect key="frame" x="0.0" y="83" width="375" height="646"/>
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="TemperatureChart" label="TemperatureChart"/>
                            </view>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="6CQ-T7-Mxq">
                                <rect key="frame" x="56.333333333333343" y="44" width="262.33333333333326" height="32"/>
                                <segments>
                                    <segment title="Yesterday"/>
                                    <segment title="Today"/>
                                </segments>
...
                        <viewLayoutGuide key="safeArea" id="xZN-Cx-kly"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="History" image="History" id="9Ha-uv-7PJ"/>
                    <connections>
                        <outlet property="chartView" destination="7JP-8P-Vpv" id="Hbu-kh-BST"/>
...
                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bnZ-gF-0bj">
                                                <rect key="frame" x="8" y="11.999999999999998" width="156" height="31.333333333333329"/>
                                                <accessibility key="accessibilityConfiguration" identifier="wind-label" label="Wind"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                                <nil key="highlightedColor"/>
...
                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="tO0-l8-TLO">
                                                <rect key="frame" x="174" y="11.999999999999998" width="155.66666666666663" height="31.333333333333329"/>
                                                <accessibility key="accessibilityConfiguration" identifier="temp-label" label="Temperature"/>
                                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="26"/>
                                                <nil key="highlightedColor"/>
...
                                        <rect key="frame" x="0.0" y="65" width="337.66666666666669" height="276.66666666666669"/>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="live-weather" label="Live weather">
                                            <bool key="isElement" value="YES"/>
                                        </accessibility>
...
                                            <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text=" " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KXc-Qn-5vk">
                                                <rect key="frame" x="0.0" y="0.0" width="337.66666666666669" height="17"/>
                                                <accessibility key="accessibilityConfiguration" identifier="measured-time-label" label="Measured Time"/>
                                                <fontDescription key="fontDescription" type="italicSystem" pointSize="14"/>
                                                <color key="textColor" systemColor="secondaryLabelColor" red="0.23529411759999999" green="0.23529411759999999" blue="0.26274509800000001" alpha="0.59999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
...
                        <viewLayoutGuide key="safeArea" id="jLR-eB-Idc"/>
                    </scrollView>
                    <navigationItem key="navigationItem" title="meteo Tartu" id="899-mk-YI5">
                        <barButtonItem key="leftBarButtonItem" systemItem="action" id="aQN-PY-ivO">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
...
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="aIV-Gs-kd5" userLabel="Refresh">
                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
...
